# burguesesbot

./: .env.example  .env.production  .gitignore  .swcrc  README.md  nodemon.json  package-lock.json  package.json  pyproject.toml  serverless.yml  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md
.github/instructions/: adapters.instructions.md  ai.instructions.md  events.instructions.md  freegames.instructions.md  trivia.instructions.md  whosplaying.instructions.md
.github/workflows/: ci.yml  default.yml  deploy.yml  python-ci.yml
apps/telegram-bot/: README.md  pyproject.toml
docs/: ai-port.md  module-boundaries.md  prompts.md  providers.md  testing.md
libs/common/: README.md  pyproject.toml
libs/mcp_utils/: README.md  pyproject.toml
services/content-deals-mcp/: README.md  pyproject.toml
services/gaming-social-mcp/: README.md  pyproject.toml
src/: app.module.ts  bootstrap.ts  bot.ts  commands.ts  events.ts  function.ts  index.ts  main-serverless.ts  main.ts
src/adapters/: service.adapters.ts
src/ai/: ai.module.ts  engine.ts  history.ts  index.ts  system.prompt.ts
src/ai/domain/: chat-context.ts  chat.ts  message.ts
src/ai/providers/: chat.service.spec.ts  chat.service.ts
src/bot/: bot.module.ts
src/bot/chat/: chat.spec.ts  chat.ts
src/bot/chatgpt/: chat-context.ts  chatgpt.service.spec.ts  chatgpt.service.ts
src/bot/discord/: discord.service.ts
src/bot/freegames/: freegames.helper.ts  freegames.interface.ts  freegames.service.spec.ts  freegames.service.ts
src/bot/long-week/: long-week.update.spec.ts  long-week.update.ts
src/bot/notify/: notify.controller.spec.ts  notify.controller.ts  notify.model.ts  notify.service.spec.ts  notify.service.ts
src/bot/trivia/: trivia.helper.ts  trivia.interface.ts  trivia.service.spec.ts  trivia.service.ts  trivia.update.spec.ts  trivia.update.ts
src/constants/: contants.ts
src/controllers/: events.controllers.ts
src/discord/: discord.module.ts  index.ts
src/discord/domain/: guild.ts  (+2 more)
src/freegames/: freegames.helper.ts  freegames.service.ts
src/helper/: constants.ts  decorator.ts  functions.ts  types.ts
src/long-week/: long-week.module.ts  long-week.service.spec.ts  long-week.service.ts  long-week.update.ts
src/mocks/: ai.mock.ts
src/trivia/: trivia.helper.ts
src/whosplaying/: guild.helper.ts  guild.interface.ts
tests/: adapter-thinking.test.ts  ai.adapter.test.ts  controllers.test.ts  langchain.adapter.test.ts  langchain.error.test.ts  langchain.helpers.test.ts  mock.ai.test.ts  prompts.test.ts  providers.adapter.test.ts  utils.test.ts
(+44 files in other folders)
