[project]
name = "burguesesbot-monorepo"
version = "0.0.0"
description = "Monorepo scaffold for MCP services and Telegram bot"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Using Poetry only for env/deps at the root. Individual packages can define their own pyproject later.
package-mode = false

# Monoranger workspace configuration (scaffold). This will be used by Monoranger to discover packages.
[tool.monoranger]
packages = [
  "apps/telegram-bot",
  "services/gaming-social-mcp",
  "services/content-deals-mcp",
  "libs/common",
  "libs/mcp_utils",
]
