[project]
name = "content-deals-mcp"
version = "0.0.0"
description = "Content deals MCP service (skeleton)"
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "content_deals_mcp", from = "src" }
]
